# 2017-Vision-Code

./: .travis.yml  CMakeLists.txt  README.md  deploy.sh  jetsonBuild.sh  run-hardware-tests.sh  setup.sh  start.sh
ControlPanel/src/org/team401/vision/controlpanel/: ControlPanel.java
ControlPanel/src/org/team401/vision/controlpanel/dialog/: MainDialog.form  MainDialog.java
ControlPanel/src/org/team401/vision/controlpanel/dialog/component/: LinkedControlGroup.java
ControlPanel/src/org/team401/vision/controlpanel/stream/: StreamListener.java
ControlPanel/src/org/team401/vision/controlpanel/update/: CameraModeTask.java  CameraSwitchTask.java  ColorConverter.java  Dualean.java  RefreshTask.java  UpdateGetMethod.java  UpdateGroup.java  UpdateManager.java  UpdatePair.java  UpdateSetMethod.java  UpdateTask.java  UpdaterTask.java
Eyes/src/org/team401/vision/eyes/: Eyes.java
VisionController/src/org/team401/vision/controller/: Filter.java  NetworkData.java  NetworkJob.java  Pair.java  TestyFun.java  VisionController.java
VisionController/src/org/team401/vision/controller/event/: Event.java  EventHandler.java  EventHandlerGroup.java  IncomingDataEvent.java  IncomingDataEventHandler.java  OutgoingDataEvent.java  OutgoingDataEventHandler.java
VisionController/src/org/team401/vision/controller/preset/: CameraSettingsOperations.java  InitOperations.java  ProcSettingsOperations.java  StreamOperations.java
VisionController/src/org/team401/visioncontroller/: ControllerBackend.java  Flags.java  NetworkJob.java  VisionController.java  VisionControllerResponse.java
VisionDataStream/src/org/team401/vision/VisionDataStream/: Test.java  VisionData.java  VisionDataStream.java
cmake/: GTestFunctions.cmake
controlpanel/src/org/team401/vision/controlpanel/: ControlPanel.java
controlpanel/src/org/team401/vision/controlpanel/dialog/: AddressEntryDialog.form  AddressEntryDialog.java  ConnectingDialog.form  ConnectingDialog.java  LinkedControlGroup.java  MainDialog.form  MainDialog.java  PingerUpdateHook.java  ResponseHook.java
controlpanel/src/org/team401/vision/controlpanel/network/: ControlSocket.java  ImageStreamSocket.java  NetworkJob.java  Pinger.java  Request.java  Response.java
main/: CMakeLists.txt  main.cpp
main/src/: CMakeLists.txt  SayHello.cpp  SayHello.hpp  ThreadFlags.cpp  ThreadFlags.hpp
main/src/network/: FrameSender.cpp  FrameSender.hpp
processor/: CMakeLists.txt  main.cpp  runLoop.sh  start.sh
processor/res/: distortion.yml
processor/src/: CMakeLists.txt
processor/src/abstraction/: Camera.cpp  Camera.hpp  MatProvider.cpp  MatProvider.hpp
processor/src/networking/: ControlUpdate.cpp  ControlUpdate.hpp  Controller.cpp  Controller.hpp  DataBlob.hpp  DataStreamer.cpp  DataStreamer.hpp  StreamData.cpp  StreamData.hpp  Streamer.cpp  Streamer.hpp
processor/src/processing/: GearProc.cpp  GearProc.hpp  GoalProc.cpp  GoalProc.hpp  Processor.cpp  Processor.hpp
processor/src/utility/: Base64.cpp  Base64.hpp  ConfigParser.cpp  ConfigParser.hpp  Configuration.cpp  Configuration.hpp  Debug.cpp  Debug.hpp  Log.cpp  OutWindows.cpp  OutWindows.hpp
script/: GenCoveage.sh  InstallBoost.sh  InstallCPPZMQ.sh  InstallLibZMQ.sh  InstallOpenCV.sh  InstallV4L2.sh  InstallZHelpers.sh
tests/: CMakeLists.txt
tests/main_tests/: CMakeLists.txt  say_hello_tests.cpp
tests/processor_tests/: CMakeLists.txt  MockCamera.hpp  MockProcessor.hpp  MockStreamer.hpp  TestingConstants.cpp  TestingConstants.hpp  fake_test.cpp  networking.cpp  utility.cpp
tests/processor_tests/res/: config_parser_read.cfg
tests/processor_tests_hardware/: CMakeLists.txt  hardware_camera_tests.cpp
tests/processor_tests_hardware/res/: cameraConfig.txt
